[package]
name = "lasermidi_web"
version = "0.1.0"
authors = ["Eitan Mosenkis <eitan@mosenkis.net>"]

[dependencies]
css-color-parser = "0.1"
docopt = "0.8"
lasermidi = { path = "..", default-features = false }
rimd = "0.0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
shlex = "0.1.1"
stdweb = "0.1.3"
